<resources>
    <string name="telefone">Telefone</string>
    <string name="email">E-Mail</string>
    <string name="nome">Nome</string>
    <string name="titulo">FireBase</string>
    <string name="app_name">FireBase</string>
    <string name="inserir">Inserir</string>
    <string name="alterar">Alterar</string>
    <string name="excluir">Excluir</string>
    <string name="listar">Listar</string>

</resources>
