<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/titulo"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/edt_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email" />

            <EditText
                android:id="@+id/edt_telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefone" />



            <Button
                android:id="@+id/btn_inserir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inserir" />

            <Button
                android:id="@+id/btn_listar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listar" />

            <Button
                android:id="@+id/btn_excluir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/excluir" />


            <Button
                android:id="@+id/btn_alterar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alterar" />

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/listView"></ListView>

        </LinearLayout>
</LinearLayout>


